syntax = "proto3";

option go_package = "github.com/yndc/kvrpc";

package main;

service KVRPC {
  rpc Ping (Empty) returns (PingResponse);
  rpc Set (SetRequest) returns (SetResponse);
  rpc Get (GetRequest) returns (GetResponse);
  rpc Del (DelRequest) returns (Empty);
}

message SetRequest {
  repeated KeyValue values = 1;
}

message SetResponse {
  repeated bool result = 1;
}

message GetRequest {
  repeated bytes keys = 1;
}

message GetResponse {
  repeated ValueResult values = 1;
}

message DelRequest {
  repeated bytes keys = 1;
}

message KeyValue {
  bytes key = 1;
  bytes value = 2;
}

message ValueResult {
  bytes value = 1;
  bool exists = 2;
}

message PingResponse {
  string response = 1;
}

message Empty {}